# luxera

./: .gitignore  .prettierignore  MANIFEST.in  Makefile  README.md  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  turbo.json
benchmarks/: bench_bvh_occlusion.py  bench_occlusion.py  bench_vectorised.py
docs/: DEV_DESKTOP.md
luxera/: __init__.py  cli.py  runner.py
parity/: .gitignore  README.md
scripts/: benchmark_gates.py  build_release.py  clean.py  no_scaffold_guard.py  release_gates.py
tests/: test_adaptive_grid_refines.py  test_adjacency_shared_edges.py  test_agent_audit.py  test_agent_context_memory.py  test_agent_planner.py  test_agent_registry_contract.py  test_agent_runtime.py  test_agent_runtime_tools_surface.py  test_agent_session_artifact.py  test_agent_summarize.py  test_agent_tools_extended.py  test_agentic_support.py  test_analysis_pipeline.py  test_arc_geometry.py  test_authored_opening_subtraction.py  test_backend_comparison_export.py  test_benchmark_gates.py  test_bvh.py  test_bvh_accel_and_ray_policy.py  test_bvh_occlusion_correctness.py  test_bvh_refit.py  test_calc_grid_footprint.py  test_calc_objects_run.py  test_calc_objects_sampling.py  test_calc_ops_line_grid.py  test_calcs_geometry_ops.py  test_calcs_objects.py  test_calculation.py  test_cli_agent_batch.py  test_cli_agent_context.py  test_cli_compare_results.py  test_cli_compare_variants.py  test_cli_demo.py  test_cli_geometry.py  test_cli_golden.py  test_cli_indoor_workflow_anchor.py  test_cli_library.py  test_cli_parity_corpus.py  test_cli_run_all_jobkind_reports.py  test_cli_validate.py  (+178 more)
(+1455 files in other folders)
